force-app/main/default/objects/PolicyAccountMembership__c/PolicyAccountMembership__c.object-meta.xml
<CustomObject>
    <label>Policy/Account Membership</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Traditional Policy No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy/Account Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>