force-app/main/default/objects/PolicyAccountMembership__c/fields/AccountFirm__c.field-meta.xml
<CustomField>
    <fullName>AccountFirm__c</fullName>
    <label>Company/Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policy/Account Memberships</relationshipLabel>
    <relationshipName>Policy_Account_Memberships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>