force-app/main/default/objects/PolicyAccountMembership__c/fields/Adjusted_Current_GL_Membership__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Current_GL_Membership__c</fullName>
    <label>Adjusted February Current Membership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>