force-app/main/default/objects/PolicyAccountMembership__c/fields/BIND_Membership__c.field-meta.xml
<CustomField>
    <fullName>BIND_Membership__c</fullName>
    <label>Surest Membership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>