force-app/main/default/objects/PolicyAccountMembership__c/fields/Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Business_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Business Line</label>
    <length>35</length>
    <type>Text</type>
</CustomField>