force-app/main/default/objects/PolicyAccountMembership__c/fields/Business_Line_Change__c.field-meta.xml
<CustomField>
    <fullName>Business_Line_Change__c</fullName>
    <formula>IF(AND(AND((UPPER(Business_Line__c) != UPPER(Prior_Business_Line__c)),GLDate__c&gt;= DATE(2020,02,29) ),UPPER(Name)==&apos;TOTAL GL MEMBERSHIP&apos;) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Line Change</label>
    <type>Checkbox</type>
</CustomField>