force-app/main/default/objects/PolicyAccountMembership__c/fields/Complex_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Complex_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complex Accounts</label>
    <type>Checkbox</type>
</CustomField>