force-app/main/default/objects/PolicyAccountMembership__c/fields/Current_GL_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_GL_Date__c</fullName>
    <formula>IF(GLDate__c = DATEVALUE(&quot;2017-07-31&quot;),GLMembership__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current GL Membership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>