force-app/main/default/objects/PolicyAccountMembership__c/fields/End_of_Feb__c.field-meta.xml
<CustomField>
    <fullName>End_of_Feb__c</fullName>
    <formula>IF(GLDate__c = 

DATE
(

IF( MONTH(TODAY())= 1   ||  MONTH(TODAY())= 2 , YEAR( TODAY())-1, YEAR( TODAY())) 
 , 02 ,  


(
IF 
(
(OR(
MOD( YEAR( TODAY() ), 400 ) = 0,
AND(
MOD( YEAR( TODAY() ), 4 ) = 0,
MOD( YEAR( TODAY() ), 100 ) != 0
)
))
,29,28)
)
)
,
GLMembership__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz_End of Feb GL Membership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>