force-app/main/default/objects/PolicyAccountMembership__c/fields/Exclude_Case__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Case</label>
    <type>Checkbox</type>
</CustomField>