force-app/main/default/objects/PolicyAccountMembership__c/fields/Exclude_Case_Comments__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Case_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exclude Case Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>