force-app/main/default/objects/PolicyAccountMembership__c/fields/FundingType__c.field-meta.xml
<CustomField>
    <fullName>FundingType__c</fullName>
    <label>Funding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>ASO and FI</fullName>
            </value>
            <value>
                <fullName>Medica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>