force-app/main/default/objects/PolicyAccountMembership__c/fields/GL_Label__c.field-meta.xml
<CustomField>
    <fullName>GL_Label__c</fullName>
    <formula>IF(

GLDate__c = 


DATE
(
IF( MONTH(TODAY())= 1   ||  MONTH(TODAY())= 2 , YEAR( TODAY())-1, YEAR( TODAY()))

, 02 ,  


(
IF 
(
(OR(
MOD( YEAR( TODAY() ), 400 ) = 0,
AND(
MOD( YEAR( TODAY() ), 4 ) = 0,
MOD( YEAR( TODAY() ), 100 ) != 0
)
))
,29,28)
)
)
,
&apos;End of Feb &apos; &amp; TEXT(IF( MONTH(TODAY())= 1   ||  MONTH(TODAY())= 2 , YEAR( TODAY())-1, YEAR( TODAY()))) ,&apos;Curent GL Date (31/7/2017)&apos; )</formula>
    <label>GL Label</label>
    <type>Text</type>
</CustomField>