force-app/main/default/objects/PolicyAccountMembership__c/fields/GL_Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>GL_Membership_Status__c</fullName>
    <label>GL Membership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Termed Business</fullName>
            </value>
            <value>
                <fullName>Full Transfer</fullName>
            </value>
            <value>
                <fullName>Spin-Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>