force-app/main/default/objects/PolicyAccountMembership__c/fields/GLDate__c.field-meta.xml
<CustomField>
    <fullName>GLDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>