force-app/main/default/objects/PolicyAccountMembership__c/fields/GLMembership__c.field-meta.xml
<CustomField>
    <fullName>GLMembership__c</fullName>
    <label>GL Membership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>