force-app/main/default/objects/PolicyAccountMembership__c/fields/Max_GL_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_GL_Date__c</fullName>
    <formula>if( ISPICKVAL(MembershipType__c, &apos;Medical&apos;) &amp;&amp; AccountFirm__r.Name =&apos;UnitedHealth Group&apos;, VALUE(TEXT(DAY(GLDate__c)) &amp;  TEXT(MONTH(GLDate__c)) &amp;  TEXT(YEAR(GLDate__c))),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max GL Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>