force-app/main/default/objects/PolicyAccountMembership__c/fields/Mbrs_Override_Comments__c.field-meta.xml
<CustomField>
    <fullName>Mbrs_Override_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Override GL Membership Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>