force-app/main/default/objects/PolicyAccountMembership__c/fields/Membership_Persistency__c.field-meta.xml
<CustomField>
    <fullName>Membership_Persistency__c</fullName>
    <formula>( Adjusted_Current_GL_Membership__c/ Adjusted_Prior_Year_GL_Membership__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Persistency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>