force-app/main/default/objects/PolicyAccountMembership__c/fields/MembershipbyMktReport__c.field-meta.xml
<CustomField>
    <fullName>MembershipbyMktReport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Membership by Mkt Report</label>
    <type>Url</type>
</CustomField>