force-app/main/default/objects/PolicyAccountMembership__c/fields/MembershipType__c.field-meta.xml
<CustomField>
    <fullName>MembershipType__c</fullName>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Critical Illness</fullName>
            </value>
            <value>
                <fullName>Accident Protection</fullName>
            </value>
            <value>
                <fullName>Optum Rx</fullName>
            </value>
            <value>
                <fullName>Hospital Indemnity</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>LTD</fullName>
            </value>
            <value>
                <fullName>STD</fullName>
            </value>
            <value>
                <fullName>Pet Insurance (FIGO)</fullName>
            </value>
            <value>
                <fullName>Optum</fullName>
                <isActive>false</isActive>
                <label>Optum</label>
            </value>
            <value>
                <fullName>Retiree</fullName>
                <isActive>false</isActive>
                <label>Retiree</label>
            </value>
            <value>
                <fullName>URS</fullName>
                <isActive>false</isActive>
                <label>URS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>