force-app/main/default/objects/PolicyAccountMembership__c/fields/Optum_Rx_Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Optum_Rx_Business_Model__c</fullName>
    <label>Optum Rx Business Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carve In</fullName>
            </value>
            <value>
                <fullName>Optum Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>