force-app/main/default/objects/PolicyAccountMembership__c/fields/Override_Current_GL_Membership__c.field-meta.xml
<CustomField>
    <fullName>Override_Current_GL_Membership__c</fullName>
    <label>IC Override - Adjusted Current GL Mbrshp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>