force-app/main/default/objects/PolicyAccountMembership__c/fields/Override_Membership_Persistency__c.field-meta.xml
<CustomField>
    <fullName>Override_Membership_Persistency__c</fullName>
    <formula>IF(ISNULL( Override_Current_GL_Membership__c ),null,
( Override_Current_GL_Membership__c / Adjusted_Prior_Year_GL_Membership__c))</formula>
    <label>IC Override - Membership Persistency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>