force-app/main/default/objects/PolicyAccountMembership__c/fields/PolicyExternalUniqueID__c.field-meta.xml
<CustomField>
    <fullName>PolicyExternalUniqueID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy External Unique ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>