force-app/main/default/objects/PolicyAccountMembership__c/fields/PolicyName__c.field-meta.xml
<CustomField>
    <fullName>PolicyName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>