force-app/main/default/objects/PolicyAccountMembership__c/fields/Primary_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policy/Account Memberships</relationshipLabel>
    <relationshipName>Policy_Account_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>