force-app/main/default/objects/PolicyAccountMembership__c/fields/Primary_Consulting_Firm__c.field-meta.xml
<CustomField>
    <fullName>Primary_Consulting_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Consulting Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policy/Account Memberships (Primary Consulting Firm)</relationshipLabel>
    <relationshipName>Policy_Account_Memberships1</relationshipName>
    <type>Lookup</type>
</CustomField>