force-app/main/default/objects/PolicyAccountMembership__c/fields/Prior_Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Prior_Business_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Business Line</label>
    <length>50</length>
    <type>Text</type>
</CustomField>