force-app/main/default/objects/PolicyAccountMembership__c/fields/Prior_Year_GL_Membership__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_GL_Membership__c</fullName>
    <label>February Prior Membership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>