force-app/main/default/objects/PolicyAccountMembership__c/fields/Surest_Policy_No__c.field-meta.xml
<CustomField>
    <fullName>Surest_Policy_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Policy No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>