force-app/main/default/objects/PolicyAccountMembership__c/fields/Transfer_In__c.field-meta.xml
<CustomField>
    <fullName>Transfer_In__c</fullName>
    <label>Transfer In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>