force-app/main/default/objects/PolicyAccountMembership__c/fields/Transfer_Out__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Out__c</fullName>
    <label>Transfer Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>