force-app/main/default/objects/PolicyAccountMembership__c/fields/UMR_Membership__c.field-meta.xml
<CustomField>
    <fullName>UMR_Membership__c</fullName>
    <label>UMR Membership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>