force-app/main/default/objects/PolicyAccountMembership__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AccountFirm__c</columns>
    <columns>NAME</columns>
    <columns>PolicyName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>BIND_Membership__c</columns>
    <columns>UMR_Membership__c</columns>
    <columns>GLMembership__c</columns>
    <columns>FundingType__c</columns>
    <columns>GLDate__c</columns>
    <columns>MembershipType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountFirm__c</field>
        <operation>contains</operation>
        <value>mission</value>
    </filters>
    <filters>
        <field>MembershipType__c</field>
        <operation>equals</operation>
        <value>Medical</value>
    </filters>
    <label>All</label>
</ListView>