force-app/main/default/objects/PolicyAccountMembership__c/listViews/Lokesh_Validation.listView-meta.xml
<ListView>
    <fullName>Lokesh_Validation</fullName>
    <columns>AccountFirm__c</columns>
    <columns>NAME</columns>
    <columns>GLDate__c</columns>
    <columns>GL_Membership_Status__c</columns>
    <columns>Business_Line__c</columns>
    <columns>Prior_Business_Line__c</columns>
    <columns>GLMembership__c</columns>
    <columns>Prior_Year_GL_Membership__c</columns>
    <columns>Membership_Persistency__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountFirm__c</field>
        <operation>startsWith</operation>
        <value>Danaher Corporation</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Total GL Membership</value>
    </filters>
    <label>Lokesh Validation</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>