force-app/main/default/objects/PolicyAccountMembership__c/listViews/Michele_Validations.listView-meta.xml
<ListView>
    <fullName>Michele_Validations</fullName>
    <columns>AccountFirm__c</columns>
    <columns>NAME</columns>
    <columns>ExternalUniqueID__c</columns>
    <columns>GLDate__c</columns>
    <columns>GLMembership__c</columns>
    <columns>BIND_Membership__c</columns>
    <columns>MembershipType__c</columns>
    <columns>PolicyName__c</columns>
    <columns>Business_Line__c</columns>
    <columns>Prior_Business_Line__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MembershipType__c</field>
        <operation>equals</operation>
        <value>Medical</value>
    </filters>
    <filters>
        <field>GLDate__c</field>
        <operation>equals</operation>
        <value>2/29/2024</value>
    </filters>
    <label>Michele Validations</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>